--- a/index.html
+++ b/index.html
@@ -6,43 +6,51 @@
 <title>Meri Laddoo 💗</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
 <style>
-:root{
-  --pink1:#f8d7da; --pink2:#f4a6b5; --pink3:#fce4ec; --pink4:#ffb6c1; --white:#ffffff;
-}
-body{margin:0;font-family:'Poppins',sans-serif;background:linear-gradient(135deg,var(--pink3),var(--white));color:#444;overflow-x:hidden}
-header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;background:linear-gradient(rgba(255,255,255,0.35),rgba(255,255,255,0.65)),url('cover.jpg');background-size:cover;background-position:center center;background-repeat:no-repeat;position:relative}
-header h1{font-family:'Great Vibes',cursive;font-size:72px;color:#e75480;margin:0;animation:fadeUp 2s ease}
-header p{font-size:22px;animation:fadeUp 3s ease}
-section{padding:70px 20px;max-width:1100px;margin:auto}
-.card{background:var(--white);padding:25px;border-radius:20px;box-shadow:0 10px 25px rgba(0,0,0,0.1);margin-bottom:40px;opacity:0;transform:translateY(40px);transition:all 1s}
-.card.show{opacity:1;transform:translateY(0)}
-.nicknames span{display:inline-block;background:var(--pink4);padding:10px 18px;border-radius:20px;margin:8px;color:white;font-weight:600;transition:.3s}
-.nicknames span:hover{transform:scale(1.15)}
+:root{--pink1:#f8d7da;--pink3:#fce4ec;--pink4:#ffb6c1}
+body{margin:0;font-family:Poppins,sans-serif;background:linear-gradient(135deg,var(--pink3),#fff);overflow-x:hidden}
+header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;background:linear-gradient(rgba(255,255,255,.35),rgba(255,255,255,.65)),url('cover.jpg');background-size:cover;background-position:center}
+header h1{font-family:'Great Vibes',cursive;font-size:72px;color:#e75480;margin:0}
+section{padding:60px 20px;max-width:1100px;margin:auto}
+.card{background:#fff;padding:25px;border-radius:20px;box-shadow:0 10px 25px rgba(0,0,0,.1);margin-bottom:40px}
+.nicknames span{display:inline-block;background:var(--pink4);padding:10px 18px;border-radius:20px;margin:8px;color:#fff;font-weight:600;cursor:pointer}
 .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:15px}
-.gallery img{width:100%;border-radius:18px;transition:.5s}
-.gallery img:hover{transform:scale(1.08) rotate(1deg)}
-.video iframe{width:100%;height:400px;border-radius:20px}
-footer{text-align:center;padding:30px;background:var(--pink1);font-size:18px}
-.heart{position:fixed;color:#ff4d6d;animation:float 6s linear infinite;font-size:22px;pointer-events:none}
-@keyframes float{0%{transform:translateY(100vh) scale(.5)}100%{transform:translateY(-10vh) scale(1.2)}}
-@keyframes fadeUp{from{opacity:0;transform:translateY(50px)}to{opacity:1;transform:translateY(0)}}
-.type{border-right:3px solid #e75480;white-space:nowrap;overflow:hidden;animation:typing 4s steps(30,end),blink .7s infinite}
-@keyframes typing{from{width:0}to{width:100%}}
-@keyframes blink{50%{border-color:transparent}}
-@media(max-width:768px){header{background-size:contain;background-color:#fce4ec;background-position:center top;}}
+.gallery img{width:100%;border-radius:18px}
+footer{text-align:center;padding:30px;background:var(--pink1)}
+@media(max-width:768px){header{background-size:contain;background-color:#fce4ec;background-position:center top}}
+#gate{position:fixed;inset:0;background:linear-gradient(135deg,#fce4ec,#fff);display:flex;align-items:center;justify-content:center;z-index:9999;text-align:center;padding:20px}
+button{padding:10px 18px;border:none;border-radius:12px;background:#ff8fab;color:white;margin:6px;cursor:pointer}
+input{padding:10px;border-radius:10px;border:1px solid #ccc}
 </style>
 </head>
 <body>
-<div id="tapOverlay" style="position:fixed;inset:0;background:linear-gradient(135deg,#fce4ec,#ffffff);display:flex;align-items:center;justify-content:center;z-index:9999;font-size:28px;color:#e75480;font-family:'Great Vibes',cursive;">Tap to open 💗</div>
 
-<header>
-  <h1>Meri Laddoo 💕</h1>
-  <p class="type">My Bestie • My Laddoo • My Milkshake</p>
-</header>
+<div id="gate">
+  <div id="step1">
+    <h2>What's your name? 💗</h2>
+    <p>Hint: your famous nickname 😏</p>
+    <input id="nameInput"><br><br>
+    <button onclick="checkName()">Enter</button>
+    <p id="nameErr" style="color:#e75480"></p>
+  </div>
+  <div id="step2" style="display:none">
+    <h2>Do you drink water? 💧😂</h2>
+    <button onclick="waterAns(true)">Yes</button>
+    <button onclick="waterAns(false)">No</button>
+    <p id="waterErr" style="color:#e75480"></p>
+  </div>
+  <div id="step3" style="display:none">
+    <h2>Pakka ?? 😆</h2>
+    <button onclick="pakka1()">Yes</button>
+  </div>
+  <div id="step4" style="display:none">
+    <h2>Ok one more time pakka ? 🤨</h2>
+    <button onclick="enterSite()">Yes</button>
+  </div>
+</div>
+
+<header><h1>Meri Laddoo 💕</h1></header>
 
 <section>
-  
-
   <div class="card nicknames">
     <h2>Her Nicknames</h2>
     <span data-set="bachi">Bachi</span>
@@ -51,65 +59,30 @@ footer{text-align:center;padding:30px;background:var(--pink1);font-size:18px}
     <span data-set="jigar">Jigar ka tukda</span>
     <span data-set="milk">My Milk Syrup</span>
   </div>
-
   <div id="nicknameGallery" class="card" style="display:none">
     <h2 id="galleryTitle"></h2>
     <div class="gallery" id="dynamicGallery"></div>
   </div>
-
-  
-  </div>
-
-  
-
-  
 </section>
 
 <footer>Made with ❤ for Meri Laddoo</footer>
 
-<audio id="mainSong" autoplay loop muted playsinline>
-  <source src="main.mp3" type="audio/mpeg">
-  <source src="main.mp4" type="audio/mp4">
-</audio>
+<audio id="mainSong" src="main.mp3" loop></audio>
 <audio id="nickSong"></audio>
 <audio id="photoSong"></audio>
 
 <script>
-// start main background music on first interaction
 const mainAudio=document.getElementById('mainSong');
-mainAudio.volume=0;
 
-// mobile browsers block sound autoplay — we fade in after first interaction (scroll/touch/click)
-function enableSound(){
-  let v=0;mainAudio.muted=false;
-  const fade=setInterval(()=>{v+=0.02;mainAudio.volume=v;if(v>=0.2)clearInterval(fade)},80);
-  document.removeEventListener('click',enableSound);
-  document.removeEventListener('touchstart',enableSound);
-  document.removeEventListener('scroll',enableSound);
+function checkName(){
+  const v=document.getElementById('nameInput').value.trim().toLowerCase();
+  if(v==='bachi'){step1.style.display='none';step2.style.display='block'}
+  else nameErr.innerText='Hmm… something missing 🤔'
 }
+function waterAns(ans){if(ans){step2.style.display='none';step3.style.display='block'}else waterErr.innerText='Go drink water first 💧😆'}
+function pakka1(){step3.style.display='none';step4.style.display='block'}
+function enterSite(){gate.remove();mainAudio.volume=.2;mainAudio.play().catch(()=>{})}
 
-document.addEventListener('click',enableSound);
-document.addEventListener('touchstart',enableSound);
-document.addEventListener('scroll',enableSound);
-
-// guaranteed mobile audio start (required by Chrome/Safari policies)
-const overlay=document.getElementById('tapOverlay');
-overlay.addEventListener('click',()=>{
-  mainAudio.muted=false;
-  mainAudio.volume=0.2;
-  mainAudio.play().catch(()=>{});
-  overlay.style.opacity='0';
-  setTimeout(()=>overlay.remove(),500);
-});
-
-// scroll reveal
-const cards=document.querySelectorAll('.card');
-window.addEventListener('scroll',()=>{
-  const trigger=window.innerHeight*0.85;
-  cards.forEach(c=>{if(c.getBoundingClientRect().top<trigger)c.classList.add('show')})
-});
-
-// nickname galleries
 const imageSets={
   bachi:{bg:'nb1.mp3',images:[{src:'img1.jpg',song:'s1.mp3'},{src:'img2.jpg',song:'s2.mp3'},{src:'img3.jpg',song:'s3.mp3'},{src:'img4.jpg',song:'s4.mp3'}]},
   laddoo:{bg:'nb2.mp3',images:[{src:'img1.jpg',song:'s1.mp3'},{src:'img2.jpg',song:'s2.mp3'},{src:'img3.jpg',song:'s3.mp3'},{src:'img4.jpg',song:'s4.mp3'}]},
@@ -119,66 +92,18 @@ const imageSets={
 };
 
 document.querySelectorAll('.nicknames span').forEach(tag=>{
-  tag.addEventListener('click',()=>{
-    const key=tag.dataset.set;
-    const gallery=document.getElementById('dynamicGallery');
-    const title=document.getElementById('galleryTitle');
-    gallery.innerHTML='';
-
-    // play nickname background song
-    const nickAudio=document.getElementById('nickSong');
-    nickAudio.src=imageSets[key].bg;nickAudio.currentTime=0;nickAudio.play();
-
-    imageSets[key].images.forEach(item=>{
-      const img=document.createElement('img');
-      img.src=item.src;
-      img.addEventListener('click',()=>{
-        const photoAudio=document.getElementById('photoSong');
-        photoAudio.src=item.song;photoAudio.currentTime=0;photoAudio.play();
-      });
-      gallery.appendChild(img);
+  tag.onclick=()=>{
+    const key=tag.dataset.set;dynamicGallery.innerHTML='';
+    nickSong.src=imageSets[key].bg;nickSong.play();
+    imageSets[key].images.forEach(it=>{
+      const img=document.createElement('img');img.src=it.src;
+      img.onclick=()=>{photoSong.src=it.song;photoSong.play()};
+      dynamicGallery.appendChild(img);
     });
-    title.innerText=tag.innerText+' Memories 💗';
-    document.getElementById('nicknameGallery').style.display='block';
-    window.scrollTo({top:document.getElementById('nicknameGallery').offsetTop-80,behavior:'smooth'});
-  });
+    galleryTitle.innerText=tag.innerText+' Memories 💗';
+    nicknameGallery.style.display='block';
+  }
 });
-
-// floating hearts
-setInterval(()=>{
-  const h=document.createElement('div');h.className='heart';h.innerHTML='❤';h.style.left=Math.random()*100+'vw';h.style.animationDuration=4+Math.random()*4+'s';document.body.appendChild(h);
-  setTimeout(()=>h.remove(),8000);
-},400);
-// gate logic with fun emojis 😄💧
-function checkName(){
-  const v=document.getElementById('nameInput').value.trim().toLowerCase();
-  if(v==='bachi'){
-    document.getElementById('step1').style.display='none';
-    document.getElementById('step2').style.display='block';
-  }else{
-    document.getElementById('nameErr').innerText='Hmm… something is missing 🤔 maybe add 2 more letters?';
-  }
-}
-function waterAns(ans){
-  if(ans){
-    document.getElementById('step2').style.display='none';
-    document.getElementById('step3').style.display='block';
-  }else{
-    document.getElementById('waterErr').innerText='Go drink water first 💧 then come back 😆';
-  }
-}
-function pakka1(){
-  document.getElementById('step3').style.display='none';
-  document.getElementById('step4').style.display='block';
-}
-function enterSite(){
-  const gate=document.getElementById('gate');
-  gate.style.opacity='0';
-  setTimeout(()=>gate.remove(),500);
-  const mainAudio=document.getElementById('mainSong');
-  mainAudio.muted=false;mainAudio.volume=0.2;mainAudio.play().catch(()=>{});
-}
 </script>
-
 </body>
 </html>
