--- a/index.html
+++ b/index.html
@@ -1,119 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Meri Laddoo 💗</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-<style>
-:root{--pink1:#f8d7da;--pink3:#fce4ec;--pink4:#ffb6c1}
-body{margin:0;font-family:Poppins,sans-serif;background:linear-gradient(135deg,var(--pink3),#fff);overflow-x:hidden}
-header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;background:linear-gradient(rgba(255,255,255,.35),rgba(255,255,255,.65)),url('cover.jpg');background-size:cover;background-position:center}
-header h1{font-family:'Great Vibes',cursive;font-size:72px;color:#e75480;margin:0}
-section{padding:60px 20px;max-width:1100px;margin:auto}
-.card{background:#fff;padding:25px;border-radius:20px;box-shadow:0 10px 25px rgba(0,0,0,.1);margin-bottom:40px}
-.nicknames span{display:inline-block;background:var(--pink4);padding:10px 18px;border-radius:20px;margin:8px;color:#fff;font-weight:600;cursor:pointer}
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:15px}
-.gallery img{width:100%;border-radius:18px}
-footer{text-align:center;padding:30px;background:var(--pink1)}
-@media(max-width:768px){header{background-size:contain;background-color:#fce4ec;background-position:center top}}
-#gate{position:fixed;inset:0;background:linear-gradient(135deg,#fce4ec,#fff);display:flex;align-items:center;justify-content:center;z-index:9999;text-align:center;padding:20px}
-button{padding:10px 18px;border:none;border-radius:12px;background:#ff8fab;color:white;margin:6px;cursor:pointer}
-input{padding:10px;border-radius:10px;border:1px solid #ccc}
-</style>
-</head>
-<body>
-
-<div id="gate">
-  <div id="step1">
-    <h2>What's your name? 💗</h2>
-    <p>Hint: your famous nickname 😏</p>
-    <input id="nameInput"><br><br>
-    <button onclick="checkName()">Enter</button>
-    <p id="nameErr" style="color:#e75480"></p>
-  </div>
-  <div id="step2" style="display:none">
-    <h2>Do you drink water? 💧😂</h2>
-    <button onclick="waterAns(true)">Yes</button>
-    <button onclick="waterAns(false)">No</button>
-    <p id="waterErr" style="color:#e75480"></p>
-  </div>
-  <div id="step3" style="display:none">
-    <h2>Pakka ?? 😆</h2>
-    <button onclick="pakka1()">Yes</button>
-  </div>
-  <div id="step4" style="display:none">
-    <h2>Ok one more time pakka ? 🤨</h2>
-    <button onclick="enterSite()">Yes</button>
-  </div>
-</div>
-
-<header><h1>Meri Laddoo 💕</h1></header>
-
-<section>
-  <div class="card nicknames">
-    <h2>Her Nicknames</h2>
-    <span data-set="bachi">Bachi</span>
-    <span data-set="laddoo">Meri Laddoo</span>
-    <span data-set="lady">Lady Don</span>
-    <span data-set="milk">Milk Syrup</span>
-    <span data-set="kaju">Kajukatli</span>
-  </div>
-  <div id="nicknameGallery" class="card" style="display:none">
-    <h2 id="galleryTitle"></h2>
-    <p id="nickMsg" style="margin-bottom:15px;color:#555"></p>
-    <div class="gallery" id="dynamicGallery"></div>
-  </div>
-</section>
-
-<footer>Made with ❤ for Meri Laddoo</footer>
-
-<audio id="mainSong" src="main.mp3" loop></audio>
-<audio id="nickSong"></audio>
-<audio id="photoSong"></audio>
-
-<script>
-const mainAudio=document.getElementById('mainSong');
-
-function checkName(){
-  const v=document.getElementById('nameInput').value.trim().toLowerCase();
-  if(v==='bachi'){step1.style.display='none';step2.style.display='block'}
-  else nameErr.innerText='Hmm… something missing 🤔'
-}
-function waterAns(ans){if(ans){step2.style.display='none';step3.style.display='block'}else waterErr.innerText='Go drink water first 💧😆'}
-function pakka1(){step3.style.display='none';step4.style.display='block'}
-function enterSite(){gate.remove();mainAudio.volume=.2;mainAudio.play().catch(()=>{})}
-
-const imageSets={
-  bachi:{msg:"",images:['img3.jpg']},
-  laddoo:{msg:"",images:['img2.jpg']},
-  lady:{msg:"",video:'vdo1.mp4',videoSong:'vdo1.mp3'},
-  milk:{msg:"",images:['img5.jpg']},
-  kaju:{msg:"",images:['img6.jpg','img7.jpg','img8.jpg']}
-};
-
-document.querySelectorAll('.nicknames span').forEach(tag=>{
-  tag.onclick=()=>{
-    const key=tag.dataset.set;dynamicGallery.innerHTML='';
-    nickMsg.innerText=imageSets[key].msg;
-    if(imageSets[key].video){
-      const vid=document.createElement('video');
-      vid.src=imageSets[key].video;
-      vid.controls=true;vid.autoplay=true;vid.loop=true;vid.style.width='100%';vid.style.borderRadius='18px';
-      dynamicGallery.appendChild(vid);
-      photoSong.src=imageSets[key].videoSong;photoSong.loop=true;photoSong.currentTime=0;photoSong.play();
-    }else{
-      imageSets[key].images.forEach(src=>{
-        const img=document.createElement('img');img.src=src;
-        const song= src.startsWith('img6')||src.startsWith('img7')||src.startsWith('img8') ? 'img6.mp3' : src.replace('.jpg','.mp3');
-        img.onclick=()=>{photoSong.src=song;photoSong.loop=true;photoSong.currentTime=0;photoSong.play()};
-        dynamicGallery.appendChild(img);
-      });
-    }
-    galleryTitle.innerText=tag.innerText+' 💗';
-    nicknameGallery.style.display='block';
-  }
-});
-</script>
-</body>
-</html>
+blan k
